data/derived/fa15/progs/unify/prog1472.ml.out
Characters 68-76:
  wwhile (helper b,b);;
          ^^^^^^^^
Error: This expression has type bool * 'a
       but an expression was expected of type 'b -> 'b * bool
